--- a/src/Components/About.css
+++ b/src/Components/About.css
@@ -54,7 +54,7 @@ h2 {
   font-weight: 600;
 }
 .aboutPhoto {
-  background-image: url("../Images/smriti.png");
+  background-image: url("../Images/smritiphoto.jpg");
   /* background-color: #cccccc; */
   height: 500px;
   background-position: center;
