--- a/src/Components/Contact.css
+++ b/src/Components/Contact.css
@@ -4,7 +4,7 @@
 
 
 #contact {
-    padding-top: 110px;
+  padding-top: var(--mainpage-padding);
   display: flex;
   justify-content: center;
   align-items: center;
