--- a/src/Components/MySkills.css
+++ b/src/Components/MySkills.css
@@ -1,6 +1,34 @@
 /* .MySkills{
     height: 100vh;
 } */
+#myskills {
+  padding-top: var(--mainpage-padding);
+  background: var(--background-main);
+  min-height: 100vh;
+}
+.skill-container{
+  padding-top: 2em;
+  display: grid;
+  grid-template-columns: auto auto auto auto auto auto;
+  grid-template-rows: auto;
+  grid-template-areas:
+    "skill-1 skill-1 skill-1 skill-2 skill-2 skill-2";
+  gap: 20px;
+  padding: 50px;
+}
+@media only screen and (max-width: 1024px){
+  .skill-container {
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: auto auto ;
+    grid-template-areas:
+      "skill-1"
+      "skill-2";
+    gap: 50px 20px;
+    /* background-color: #2196f3; */
+    padding: 10px;
+  }
+}
 .skills {
   padding-top: 1em;
   top: auto;
